# nixify

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/parser/: json.rs  mod.rs  toml.rs  yaml.rs
