[package]
name = "nixify"
description = "A simple tool to parse existing configuration files into nix syntax"
version = "0.1.0"
license = "GPL-3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.4.0", features=["cargo", "derive"]}
# Added here so no vulnerable version is used
crossbeam-utils = "0.8.19"
indexmap = "2.2.6"
nixpkgs-fmt = "1.3.0"
serde_json = "1.0.117"
toml = "0.8.12"
yaml-rust2 = "0.8.0"
